--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -1,20 +1,14 @@
 <head>
-  <title>google-maps</title>
+  <title>FountCouver</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-
-   <div class="map-container">
+  <h1>Welcome to FountCouver</h1>
+  <h2><em>Quick Coordinates for Quenching</em></h2>
+  <div class="map-container">
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
 
   
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
