Added a meteor collection to track program status. Added to this collection a count of the initial number of locations provided in the city of Vancouver file.  Displayed this number below map.

--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -8,6 +8,7 @@
   <div class="map-container">
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
+  <p>Number of locations in City of Vancouver data repository: {{sourceLocationsCount}}</p>
 
   
 </body>
