Delayed mapping points to accommodate potential delays as DDP loads client-side version of Locations collection.  Added a display of the total number of locations plotted on the map (using a reactive variable).

--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -9,7 +9,7 @@
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
   <p>Number of locations in City of Vancouver data repository: {{sourceLocationsCount}}</p>
-
+  <p>Number of locations mapped: {{pointsMappedCount}}</p>
   
 </body>
 
