--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -8,7 +8,7 @@
   <div class="map-container">
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
-  <p>Number of locations in City of Vancouver data repository: {{sourceLocationsCount}}</p>
+  <p>Number of water fountains listed in Vancouver's Open-Data repository: {{sourceLocationsCount}}</p>
   <p>Number of locations mapped: {{pointsMappedCount}}</p>
   
 </body>
