Minor updates to html and css for graphics and titles.

--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -1,11 +1,14 @@
 <head>
   <title>FountCouver</title>
-  <link rel="icon" sizes="16x16 32x32" href="/favicon.png?v=2">
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.png?v=4">
 </head>
 
 <body>
-  <h1>Welcome to FountCouver</h1>
-  <h2><em>Quick Coordinates for Quenching</em></h2>
+  <img src='/fountain3_med.png' alt='fountain icon' id="lead-photo">
+  <div id="title-area">
+    <h1>Welcome to FountCouver</h1>
+    <h2><em>Quick Coordinates for Quenching</em></h2>
+  </div>
   <div class="map-container">
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
