Minor layout changes

--- a/google-maps/google-maps.html
+++ b/google-maps/google-maps.html
@@ -8,10 +8,12 @@
   <div id="title-area">
     <h1>Welcome to FountCouver</h1>
     <h2><em>Quick Coordinates for Quenching</em></h2>
+    <div class='clearfix'></div>
   </div>
   <div class="map-container">
     {{> googleMap name="exampleMap" options=exampleMapOptions2}}
   </div>
+  <div class='clearfix'></div>
   <p>Number of water fountains listed in Vancouver's Open-Data repository: {{sourceLocationsCount}}</p>
   <p>Number of locations mapped: {{pointsMappedCount}}</p>
   
